--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "start:debug": "nodemon ./dist/bin/www.js"
   },
   "prisma": {
-    "seed": "dotenv -e .env.development ts-node prisma/seed.ts",
-    "seed:produciion": "dotenv -e .env.production ts-node prisma/seed.ts"
+    "seed": "dotenv -e .env.development ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
